# your-manager-backend

./: .gitignore  Cargo.toml  docker-compose.yml  rustfmt.toml
migrations/: 0001.sql  0002.sql
src/: app.rs  application.rs  auth.rs  config.rs  main.rs
src/db/: users.rs
src/domain/: aggregates.rs
src/handlers/: auth.rs  users.rs
