[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio"] }
hmac = { version = "0.12.1" }
sha2 = { version = "0.10.8" }
jwt = { version = "0.16.0" }
derive_more = "0.99.17"
